[tool.poetry]
name = "sanity-tests"
version = "0.1.0"
description = ""
authors = ["Amrita Matta <matta.amrita@gmail.com>"]
readme = "README.md"
packages = [{ include = "libs" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.test.dependencies]
pytest-playwright = "^0.4.4"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = """
    -s
"""
# log_cli : pytest will output logging records as they are emitted directly into the console.
# Otherwise, the log is printed to console only if the test fails.
# log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
